# diploma_project

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
documents/: admin.py  models.py  serializer.py  tasks.py  tests.py  urls.py  views.py
documents/management/commands/: fill.py
documents/migrations/: 0001_initial.py  0002_alter_document_file.py
users/: admin.py  models.py  serializer.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
