[tool.poetry]
name = "diploma-project"
version = "0.1.0"
description = ""
authors = ["yura_filchakov <filchakov1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
djangorestframework = "^3.15.2"
celery = "^5.4.0"
drf-yasg = "^1.21.8"
setuptools = "^75.3.0"
eventlet = "^0.37.0"
billiard = "^4.2.1"
coverage = "^7.6.4"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.6.0"
redis = "^5.2.0"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
